--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "classnames": "^2.3.2",
+    "gh-pages": "^5.0.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
