--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "reddit",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": true,
-  "homepage": "./",
+  "homepage": "./reddit/#",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
